3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

New skill: "harvesting", get something from some place - example: fishing.
(merge from trunk, revisions 5923 and 5933).
 include/skills.h sproto.h
 server/c_misc.c skill_util.c
Nicolas Weeger 2007-04-03

 common/init.c: abort() if first map doesn't exist. Better than crashing later on.
Nicolas Weeger 2007-04-08

Fix bug #1695764: Charm monsters - shared experience broken.
Add new share_exp() function, working like change_exp() but party-aware.
 common/living.c
 include/libproto.h
 server/attack.c
 server/spell_attack.c
Nicolas Weeger 2007-04-07

Fix bug #1672117: elves etc don't fire over move_allow flying tiles.
Logic for monster_use_bow() was changed to make monsters fire only
 horizontally/vertically/in diagonals, and also fire over terrain
 they can't cross but which lets an arrow go over.
 server/monster.c
 server/player.c: note about move_type
Nicolas 2007-03-31

Implement feature request #1560387: DM follow command.
 include/player.h sproto.h
 server/c_wiz.c commands.c
 server/server.c: also fix wrong player count with hidden DMs.
Nicolas Weeger 2007-03-25

Fix broken banish command: loop logic was weird (skipping one file?).
 server/ban.c
Nicolas Weeger 2007-03-25

Fix Win32 compilation.
 common/player.c: don't declare variables in the middle of the code
 lib/collect.pl.in: use binmode for files
 socket/item.c: idem
Nicolas Weeger 2007-03-24

server/c_wiz.c: fix missing treasure generation for create command in some cases.
Nicolas Weeger 2007-03-24


Changes for 1.10.0:
------------------------------------------------------------------------------
Fix 'make distclean':